# airflow-data-platform-examples

./: README.md
datakits-sqlserver/: LAYER_ARCHITECTURE.md  Makefile  README.md  docker-compose.full-stack.yml
datakits-sqlserver/.astro/: Dockerfile  config.yaml.template
datakits-sqlserver/dags/: sqlserver_bronze_dag.py
datakits-sqlserver/datakit_sqlserver_bronze_kerberos/: Dockerfile  pyproject.toml
datakits-sqlserver/datakit_sqlserver_bronze_kerberos/src/datakit_sqlserver_bronze/: __init__.py  cli.py  connector.py  ingestion.py
datakits-sqlserver/datakit_sqlserver_source/: Dockerfile  pyproject.toml
datakits-sqlserver/datakit_sqlserver_source/src/: connector.py
datakits-sqlserver/deployment/: WHY_THIS_ARCHITECTURE.md  astronomer-platform-integration.md  deployment-checklist.md  environment-abstraction.py  helm-values-override.yaml  local-to-production-journey.md  versioning-strategy.md
datakits-sqlserver/docs/: architecture.md  configuration.md  first-time-setup.md  setup-guide.md  troubleshooting.md
datakits-sqlserver/examples/: FILL_IN_THE_BLANKS_ingestion.py  README.md  docker-compose.mock.yml  mock_warehouse_setup.sql  simple_bronze_dag.py  simple_customer_ingestion.py
datakits-sqlserver/layer3-warehouse/: docker-compose.warehouse.yml
datakits-sqlserver/layer3-warehouse/init-scripts/: bronze-init.sql
docs/: GETTING-STARTED.md  README.md  TROUBLESHOOTING.md  business-setup-patterns.md  getting-started.md  implementation-guide.md  index.md  learning-path.md  running-examples.md
hello-kerberos/: README.md
hello-kerberos/dags/: hello_kerberos_dag.py
hello-world/: README.md
hello-world/dags/: hello_world_dag.py
openmetadata-ingestion/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.override.yml  requirements.txt
openmetadata-ingestion/dags/: ingest_pagila_metadata.py  ingest_sqlserver_metadata.py
pagila-implementations/pagila-sqlmodel-basic/: README.md  pyproject.toml
pagila-implementations/pagila-sqlmodel-basic/datakits/: pyproject.toml
pagila-implementations/pagila-sqlmodel-basic/datakits/datakit_pagila_bronze/models/: __init__.py  br_customer.py  br_film.py  br_ingestion_errors.py
pagila-implementations/pagila-sqlmodel-basic/datakits/datakit_pagila_bronze/transforms/: bronze_ingestion_handler.py  pagila_to_bronze.py
pagila-implementations/pagila-sqlmodel-basic/datakits/datakit_pagila_gold/transforms/: silver_to_gold.py
pagila-implementations/pagila-sqlmodel-basic/datakits/datakit_pagila_silver/models/: __init__.py  sl_customer.py  sl_transformation_errors.py
pagila-implementations/pagila-sqlmodel-basic/datakits/datakit_pagila_silver/transforms/: bronze_to_silver.py
pagila-implementations/pagila-sqlmodel-basic/datakits/datakit_pagila_source/: __init__.py
pagila-implementations/pagila-sqlmodel-basic/datakits/datakit_pagila_source/models/: __init__.py  actor.py  address.py  category.py  city.py  country.py  customer.py  film.py  inventory.py  language.py  rental.py  staff.py  store.py
pagila-implementations/pagila-sqlmodel-basic/datakits/pagila-bronze/: pyproject.toml
pagila-implementations/pagila-sqlmodel-basic/datakits/pagila-bronze/datakit_pagila_bronze/: __init__.py  ingest.py
pagila-implementations/pagila-sqlmodel-basic/datakits/pagila-bronze/datakit_pagila_bronze/models/: __init__.py  actor.py  category.py  customer.py  film.py  inventory.py  rental.py  simple_category.py
pagila-implementations/pagila-sqlmodel-basic/docker/airflow/: Dockerfile  requirements.txt
pagila-implementations/pagila-sqlmodel-basic/orchestration/: pagila_bronze_silver_gold_dag.py
pagila-implementations/pagila-sqlmodel-basic/scripts/: start-complete-demo.sh
scripts/: demo-everything-working.sh  shutdown-demo.sh  test-examples-integration.sh
