[project]
name = "datakit-sqlserver-source"
version = "0.1.0"
description = "SQL Server source connector datakit"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pyodbc>=5.1.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]