[project]
name = "datakit-pagila-bronze"
version = "0.1.0"
description = "Pagila bronze layer warehouse tables (br__pagila__public schema)"
requires-python = "==3.12.11"
dependencies = [
    "data-platform-framework",
    "typer==0.15.1",
    "pandas==2.2.3",
    "psycopg[binary]==3.2.4"
]
[project.scripts]
pagila-bronze = "datakit_pagila_bronze.cli:app"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
data-platform-framework = { path = "../../data-workspace/data-platform-framework", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["datakit_pagila_bronze"]

[tool.ruff]
target-version = "py312"
line-length = 88
extend = "../../data-workspace/pyproject.toml"
